tester/testsuite/good/multiple_declaration_1.jl
int main() {
  int x, y = 0;
  return x * y;
}
