tester/testsuite/bad/float_mod.jl
int main() {
 double x = 10.0;
 double y = 5.0;
 x % y;
 return 1;
}
